<resources>
    <string name="app_name">Test de inteligencia</string>
    <string name="Question">Tipos de inteligencia</string>
    <string name="Never">Nunca</string>
    <string name="Sometimes">A veces</string>
    <string name="Always">Siempre</string>
    <string name="Confirm">Confirmar</string>
    <string name="Result">Tu inteligencia</string>
    <string name="Exit">Salir</string>
    <string name="Next">Continuar</string>
    <string name="TittleLogin">Ingrese sus datos</string>
    <string name="NameLogin">Nombre</string>
    <string name="BeginLogin">Comenzar</string>
</resources>