<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity">

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="360dp"
        android:layout_height="164dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:paddingTop="50dp"
        android:text="@string/Question"
        android:textAlignment="center"
        android:textAppearance="@style/Base.Theme.TestDeInteligencia"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestion">

        <RadioButton
            android:id="@+id/radioButtonNever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="300dp"
            android:text="@string/Never"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/radioButtonSometimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="300dp"
            android:text="@string/Sometimes"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/radioButtonAlways"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="300dp"
            android:text="@string/Always"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>